--- a/PAGINA_WEB/index.css
+++ b/PAGINA_WEB/index.css
@@ -1,138 +1,200 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body{
+    font-family: system-ui;
+    background-color: #004D74;
 }
-body {
-    font-family: sans-serif;
-    background-color: #032030;
-    padding-top: 80PX;
-}
-h1 {
-    font-family: "Racing Sans One", sans-serif;
-    font-weight: 800;
-    font-style: normal;
-    text-align: center;
-    margin: 30px 0px;
-    background-clip: text;
-    color: transparent; /* Hacer el texto transparente para que el degradado sea visible a través del texto */
-    background-image: linear-gradient(to right, #B1C9EF, #F0F3FA); /*Cambia los colores según tus preferencias*/
-}
-.img_principal{
-    background-image: url(./fabio-quartararo.webp);
-    background-size: cover;
-    width: 100%;
-    height: 60vh;
-    background-color: #003554a6;
-    background-blend-mode: soft-light;
-    color: white;
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    z-index: 15;
-    display: inline-block;
-    width: 100%; /* O el ancho que desees para cada div */
-    margin-right: 5%; /* Espacio entre los div */
-    
-}
-.slogan{
-    font-family: "Racing Sans One", sans-serif;
-    background-clip: text;
-    color: transparent; /* Hacer el texto transparente para que el degradado sea visible a través del texto */
-    background-image: linear-gradient(to right, #B1C9EF, #F0F3FA); /*Cambia los colores según tus preferencias*/
-    font-weight: 400;
-    font-size: 8rem;
-    font-style: normal;
-    text-align: center;
-}
-img {
-    width: 400px;
-    height: 280px;
-    object-fit: cover;
-    border-radius: 20px 20px 0px 0px;
-}
-header { 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15%;
-    height: 80px;
-    top: 0;
+header{
+    background-color: #006DA4;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    box-shadow: 0 7px 8px -3px grey;
     position: fixed;
     width: 100%;
-    z-index: 100;
-    background-color: #004d74ed;
+    margin-top: -10px;
+    z-index: 99;
 }
-.scroll{
-    background-color: aliceblue;
-    box-shadow: .1rem .2rem .3rem #333
-    ;
+.container{
+    max-width: 1200px;
+    text-align: center;
+    margin: auto;
 }
-.scroll img{
-    filter: invert(15%);
-}
-.scroll h1{
-    color: rgb(5, 6, 6);
-
-}
-.carrito {
-    filter: invert(100%);
-    width: 45px;
-    height: auto;
-}
-.contenedor {
+.header-section{
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 50px;
-    margin-bottom: 20px;
-    padding-top: 3rem;
-}
-.contenedor>div{
-    box-shadow:0px 0px 5px 0px rgba(rgb(0, 0, 0.75));
-    background-color: #2D4263;
-    border-radius: 20px;
-}
-.contenedor>:hover{
-    background-color: #11294d;
-}
-.informacion{
-    height: 150px;
-    display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    margin: auto;
     align-items: center;
-    flex-direction: column;
-    gap: 15px;
-    
+    position: relative;
 }
-.informacion>p{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 25px;
-    font-weight: 300;
+.header-section div{
+    position: relative;
 }
-.informacion.precio{
-    font-size: 20px;
-    font-weight: 500;
+.header-section p{
+    position: absolute;
+    top: -24px;
+    right: -8px;
+    background-color: #fff;
+    padding: 1px 6px;
+    border-radius: 50%;
+    color: #0088cc;
+    font-weight: 700;
+    font-family: system-ui;
+    line-height: 18px;
 }
-.informacion.precio span{
-    font-size: 17px;
-    font-weight: 300;
-
-}
-.informacion.precio button{
-    background-color: #263143;
-    width: 100px;
-    height: 35;
-    border-radius: 10px;
-    border: none;
-
-    font-size: 17px;
-    font-weight: 300;
+.logo{
+    width: 164px;
+    height: 84px;
     cursor: pointer;
 }
-.informacion button:hover{
-    background-color: #2D4263;
+
+.cart{
+    width: 39px;
+    height: 38px;
+}
+.cart-products{
+    position: absolute!important;
+    top: 82px;
+    right: -18px;
+    background-color: #fff;
+    padding: 0 18px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 20%);
+    display: none;
+
+    min-width: 290px;
 }
 
+.cart:hover{
+    margin-bottom: 16px;
+    transition-duration: .5s;
+}
+/*end header*/
+.products{
+    padding-top: 170px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
+.carts{
+    max-width: 250px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 20%);
+    padding-bottom: 34px;
+    margin-bottom: 40px;
+}
+.carts img{
+    width: 100%;
+}
+.carts p{
+    font-family: system-ui;
+    font-weight: 500;
+    padding: 0 20px;
+    margin-bottom: 24px;
+}
+.carts div p{
+    position: absolute;
+    top: 0;
+    right: 0px;
+    background-color: #0088cc;
+    color: #fff;
+    padding: 2px 7px 4px 21px;
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+}
+.carts div{
+    position: relative;
+}
+.carts a{
+    font-family: system-ui;
+    text-decoration: none;
+    background: #006494;
+    padding: 9px 23px;
+    color: #fff;
+    font-size: 17px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
 
+.carts a:hover{
+    background: #fff;
+    color: #004D74;
+    border: solid 2px #004D74;
+    transition-duration: .3s;
+}
+
+/*float cart*/
+.cart-products .item img{
+    width: 115px;
+}
+
+.cart-products .item{
+    display: flex;
+    align-items: center;
+    border-bottom: solid 2px #006494;
+}
+.cart-products .item .item-content{
+    margin: 0 19px;
+    width: 201px;
+}
+.cart-products .item .item-content h5{
+    margin: 0;
+    font-size: 15px;
+    font-weight: 400;
+    font-family: system-ui;
+}
+.cart-products .item .item-content h6{
+    margin: 0;
+    font-size: 13px;
+    font-weight: 400;
+    font-family: system-ui;
+}
+.cart-products .item span{
+    background-color: #006DA4;
+    padding: 0px 5px;
+    border-radius: 50%;
+    color: #fff;
+    font-family: system-ui;
+    cursor: pointer;
+}
+.cart-products h3{
+    margin-bottom: 0;
+}
+.cart-products .item .item-content h5.cart-price{
+    font-weight: 700;
+}
+
+/*stye to btn close*/
+p.close-btn{
+    top: -4px;
+    right: 6px;
+    cursor: pointer;
+    color: #000;
+}
+p.author {
+    display: flex;
+    justify-content: center;
+    FONT-VARIANT: JIS04;
+    margin-top: 3%;
+    gap: 7px;
+}
+p.author a {
+    text-decoration: none;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.title{
+    color: #fff;
+}
+
+footer{
+    color: #fff;
+}
+
+#TITTLE{
+    position: fixed;
+    top: -1px;
+    right: 700px;
+    padding: 1px 60px;
+    color: #92dbff;
+    font-weight: 700;
+    font-size: 3rem;
+    font-family: system-ui;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
